platform_versioned_docs/version-4.2.0/_partials/sleep/activity-detection.mdx
All requests that are made through the platform count as activity in the {props.name}.


```mermaid
flowchart LR;
  kubectl("<code>$ kubectl get pod my-pod</code>") --> Platform

  Platform("vCluster Platform")

  Platform --> Cluster("Connected Cluster <br/> Kubernetes API Server")
  Cluster --> Pod("<pre>apiVersion: v1\nkind: Pod\nmetadata:\n  name: my-pod\n...</pre>")

  class kubectl code
  class Pod yaml
  class Platform platform
```

If your kube-context points to the platform's API server as a proxy before the actual connected cluster's API server, every `kubectl` request will be an activity and reset the inactivity timeout.

### Ingress Requests

For ingress-nginx based ingresses, activity detection also works automatically. Other ingress controllers are currently not supported. For nginx based ingresses, the platform will add a special annotation to each ingress that will track activity and reset the timer as soon as a request is made to that ingress.

<br></br>

:::info Ingress Wakeup

vCluster Platform supports waking up a {props.name} through an ingress independent of the underlying ingress controller. Just navigate to the ingress host and you should see a wakeup page for the {props.name}.

:::